[B]Version 2.5.8[/B]

- UTF-8 encoding fix

[B]Version 2.5.7[/B]

- various fixes
- Enables subtitles

[B]Version 2.5.6[/B]

- Use pid from feed

[B]Version 2.5.5[/B]

- Added item count to some directory names

[B]Version 2.5.4[/B]

- Flattened "All" listing and forces 2000 items for listing.
- Added item count to directory listings
- Limit Popular, Recent and Featured Videos to 100 items
- No paging support. Custom per pages for different lists will be added with paging support

[B]Version 2.5.3[/B]

- added Hulu Plus filtering for non Plus Members

[B]Version 2.5.2[/B]

- added fanart to non show listings

[B]Version 2.5.1[/B]

- change default icon to hulu for any listing without one. 

[B]Version 2.5.0[/B]

- preview release of Hulu Plus support
