@@ -5,8 +5,11 @@
 	<setting type="sep" />
 	<setting id="quality" type="enum" lvalues="30015|30023|30024|30025|30016|30017|30018|30020|30021|30022" label="30004" default="0"/>
         <setting id='enable_captions' type ="bool" label="30026" default="0"/>
-	<setting id="perpage" type="enum" label="30005" values="25|50|100|250|500|1000|2000" default="3"/>
+        
 	<setting type="sep" />
+	<setting id="perpage" type="enum" label="30005" values="25|50|100|250|500|1000|2000" default="3"/>
+	<setting id="popperpage" type="enum" label="30007" values="25|50|100|250|500|1000|2000" default="2"/>
+	<setting id="allperpage" type="enum" label="30008" values="25|50|100|250|500|1000|2000" default="4"/>
 
 	<!--login-->
 	<setting type="sep" />
